--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "eatda-fe",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
