--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.4"
   }
 }
