--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
