--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
